Thu Nov  6 19:52:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3108_Regression/run_test.pl
          Fixed a bug in this file

Thu Nov  6 16:37:30 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * docs/compiler.html:
        * TAO_IDL/be/be_global.cpp:

          Added CIAO_ROOT/ccm to TAO specific directories in tao_idl
          help.

        * TAO_IDL/driver/drv_mcpp_preproc.cpp:
        * TAO_IDL/driver/drv_preproc.cpp:

          Added more comments in the code about the need to update
          IDL_GlobalData::validate_orb_include when new folders are
          added.

        * TAO_IDL/util/utl_global.cpp:

          Fixed the issue introduced in the commit on
          'Mon Nov  3 20:11:55 UTC 2008'.

Wed Nov  5 09:03:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/Bug_2510_Regression/run_test.pl:
        * tests/Portable_Interceptors/Bug_3080/client.cpp:
          Fixed these tests again

Tue Nov  4 13:37:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Hello/run_test.pl
        * tests/Portable_Interceptors/Bug_2133/run_test.pl
        * tests/Portable_Interceptors/Bug_2510_Regression/run_test.pl
        * tests/Portable_Interceptors/Bug_3080/run_test.pl
        * tests/Portable_Interceptors/Dynamic/run_test.pl
        * tests/Portable_Interceptors/IORInterceptor/run_test.pl
        * tests/Portable_Interceptors/ORB_Shutdown/run_test.pl
        * tests/Portable_Interceptors/PICurrent/run_test.pl
          Updated to the new test framework

        * tests/Portable_Interceptors/PICurrent/server.cpp
          parse the args after initailizing the orb

Tue Nov  4 10:45:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_3486_Regression/server.cpp:
          Fixed unused variable warning

Tue Nov  4 08:16:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3108_Regression/run_test.pl